--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -29,5 +29,9 @@
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-repeat: no-repeat;
+}
+
+@mixin static-bg-image {
+  background-size: cover;
+  background-position: center;
 }
